--- a/binglan.html
+++ b/binglan.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ujian Geografi</title>
+    <title>Ujian Bahasa Inggris Lanjut</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap');
@@ -80,9 +80,9 @@
         const CONFIG = {
             EXAM_DURATION_MINUTES: 60,
             JSON_PATHS: {
-                PG: 'json/geografi-pg.json',
-                PGK: 'json/geografi-pgk.json',
-                PGKB: 'json/geografi-pgkb.json'
+                PG: 'json/binglan-pg.json',
+                PGK: 'json/binglan-pgk.json',
+                PGKB: 'json/binglan-pgkb.json'
             }
         };
     </script>
@@ -96,7 +96,7 @@
                         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253"></path>
                     </svg>
                 </div>
-                <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Ujian Geografi</h1>
+                <h1 class="text-4xl md:text-5xl font-bold text-gray-800 mb-4">Ujian Bahasa Inggris Lanjut</h1>
                 <p class="text-lg text-gray-600 mb-8">Bacalah instruksi dengan teliti sebelum memulai</p>
                 
                 <div class="bg-orange-50 rounded-2xl p-6 mb-8 text-left">
@@ -142,7 +142,7 @@
         <div class="sticky-header bg-white/95 shadow-md">
             <div class="container mx-auto px-4 py-4">
                 <div class="flex justify-between items-center mb-3">
-                    <h1 class="text-xl md:text-2xl font-bold text-gray-800">Ujian Geografi</h1>
+                    <h1 class="text-xl md:text-2xl font-bold text-gray-800">Ujian Bahasa Inggris Lanjut</h1>
                     <div id="timer" class="flex items-center gap-2 bg-orange-500 text-white px-4 py-2 rounded-full font-bold">
                         <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
                             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v4l3 3m6-3a9 9 0 11-18 0 9 9 0 0118 0z"></path>
