--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
                     <a href="matwa.html" class="card-hover bg-white rounded-2xl p-6 border-2 border-gray-100 hover:border-orange-300">
                         <div class="text-5xl mb-4">🔢</div>
                         <h4 class="text-xl font-bold text-gray-800 mb-2">Matematika Wajib</h4>
-                        <p class="text-gray-600 text-sm">Logika, aljabar, dan statistika dasar</p>
+                        <p class="text-gray-600 text-sm">Soal Simulasi</p>
                         <div class="mt-4 text-orange-500 font-semibold flex items-center gap-2">
                             Mulai Latihan <span>→</span>
                         </div>
@@ -190,7 +190,7 @@
                     <a href="bindo.html" class="card-hover bg-white rounded-2xl p-6 border-2 border-gray-100 hover:border-orange-300">
                         <div class="text-5xl mb-4">📖</div>
                         <h4 class="text-xl font-bold text-gray-800 mb-2">Bahasa Indonesia</h4>
-                        <p class="text-gray-600 text-sm">Teks, struktur bahasa, dan literasi</p>
+                        <p class="text-gray-600 text-sm">Soal Simulasi</p>
                         <div class="mt-4 text-orange-500 font-semibold flex items-center gap-2">
                             Mulai Latihan <span>→</span>
                         </div>
@@ -200,7 +200,17 @@
                     <a href="bing.html" class="card-hover bg-white rounded-2xl p-6 border-2 border-gray-100 hover:border-orange-300">
                         <div class="text-5xl mb-4">🌍</div>
                         <h4 class="text-xl font-bold text-gray-800 mb-2">Bahasa Inggris</h4>
-                        <p class="text-gray-600 text-sm">Reading, grammar, dan vocabulary</p>
+                        <p class="text-gray-600 text-sm">Soal Simulasi</p>
+                        <div class="mt-4 text-orange-500 font-semibold flex items-center gap-2">
+                            Mulai Latihan <span>→</span>
+                        </div>
+                    </a>
+                    
+                    <!-- Matwa -->
+                    <a href="matwa-sesi.html" class="card-hover bg-white rounded-2xl p-6 border-2 border-gray-100 hover:border-orange-300">
+                        <div class="text-5xl mb-4">🌍</div>
+                        <h4 class="text-xl font-bold text-gray-800 mb-2">Matematika Wajib</h4>
+                        <p class="text-gray-600 text-sm">Soal Gelombang 1 Sesi 1</p>
                         <div class="mt-4 text-orange-500 font-semibold flex items-center gap-2">
                             Mulai Latihan <span>→</span>
                         </div>
