--- a/matwa-sesi.html
+++ b/matwa-sesi.html
@@ -91,7 +91,7 @@
     <script>
         const CONFIG = {
             EXAM_DURATION_MINUTES: 50,
-            JSON_PATH: 'json/matwa-pg.json',  // Hanya pilihan ganda
+            JSON_PATH: 'json/matwa-sesi1-pg.json',  // Hanya pilihan ganda
             PASSCODES: ['BLUECHONGYUN', 'REDDILUC', 'GREENALHAITHAM', 'BLACKXIAO']  // Array passcode yang valid
         };
     </script>
